Fix minipost overflow bugs

--- a/frontend/src/styles/Forum.css
+++ b/frontend/src/styles/Forum.css
@@ -42,6 +42,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 20px;
+    width: 100%;
     gap: 20px;
 }
 .infinite-scroll-component__outerdiv {
